--- a/src/components/RestaurantMenu.css
+++ b/src/components/RestaurantMenu.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 16px;
   background-color: #fff;
-  max-width: 900px;
+  max-width: 50%;
   margin: 0 auto;
   height: 100%;
   border-bottom: 1px dashed #d3d3d3;
@@ -67,7 +67,7 @@
   margin-right: 10px;
 }
 .restaurant-line{
-  max-width: 900px;
+  max-width: 50%;
   margin: 0 auto;
   display: flex;
   justify-content: flex-start; /* Align divs to the left and right edges */
@@ -83,7 +83,7 @@
   align-items: center;
   padding: 16px;
   background-color: #fff;
-  max-width: 900px;
+  max-width: 50%;
   margin: 0 auto;
   height: 100%;
   border-bottom: 1px solid #ccc;
@@ -191,4 +191,35 @@
   font-size: 1.3rem;
   order: 3; /* Set the order to appear at the far right */
 }
-
+.restaurant-footer{ 
+  display: flex;
+  background-color:#60b246;
+  color: #fff;
+  justify-content: space-between;
+  padding: 10px;
+  position: sticky;
+  bottom: 0;
+  width:50%;
+  margin: 0 auto;
+  z-index: 2;
+  cursor: pointer;
+  align-items: center;
+  transition: transform 0.25s ease; 
+  transform: translate3d(0, 0, 0);
+ 
+}
+.cart-quantity-price{
+  margin-right:5px ;
+  text-align: left;
+}
+.cart-route{
+  flex: 1;
+  text-align: right;
+  align-items:center;
+  display:flex;
+  justify-content: flex-end;
+  padding-right: 20px;
+}
+.cart-text{
+  padding: 6px 10px;
+}
