--- a/src/components/RestaurantMenu.css
+++ b/src/components/RestaurantMenu.css
@@ -1,5 +1,5 @@
 /* CSS for menu item component */
-.restaurant-info{
+.restaurant-info {
   display: flex;
   justify-content: space-between; /* Align divs to the left and right edges */
   align-items: center;
@@ -11,62 +11,65 @@
   border-bottom: 1px dashed #d3d3d3;
   margin-top: 40px;
 }
-.restaurant-rating{
+.restaurant-rating {
   border: 0.5px solid #a7a8ac;
   flex-direction: column;
   text-align: center;
   padding: 8px;
   border-radius: 10px;
 }
-.restaurant-avgRating,.restaurant-starIcon{
+.restaurant-avgRating,
+.restaurant-starIcon {
   color: #3d9b6d;
   font-weight: 700;
   vertical-align: middle;
   justify-content: center;
 }
-.restaurant-totalRatingsString{
+.restaurant-totalRatingsString {
   font-size: 11px;
   color: #8b8d97;
-  font-family: ProximaNovaCondensedRegular,arial,Helvetica Neue,sans-serif;
+  font-family: ProximaNovaCondensedRegular, arial, Helvetica Neue, sans-serif;
   font-weight: 600;
   text-align: center;
   border-top: 1px dashed #d3d3d3;
   padding-top: 5px;
 }
 
-.restaurant-name{
+.restaurant-name {
   font-size: 1.43rem;
   font-weight: 600;
   color: #282c3f;
   margin-bottom: 8px;
   text-transform: capitalize;
 }
-.restaurant-cuisines, .restaurant-areaName{
-  font-size: .93rem;
-    color: #7e808c;
-    height: calc(0.93rem + 2px);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin-bottom: 4px;
-    white-space: nowrap;
+.restaurant-cuisines,
+.restaurant-areaName {
+  font-size: 0.93rem;
+  color: #7e808c;
+  height: calc(0.93rem + 2px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 4px;
+  white-space: nowrap;
 }
-.RestaurantCost-icon, .RestaurantTime-icon{
+.RestaurantCost-icon,
+.RestaurantTime-icon {
   vertical-align: bottom;
   margin-right: 10px;
 }
-.restaurant-slaString{
+.restaurant-slaString {
   color: #3e4152;
   font-size: 15px;
   font-weight: 700;
   margin-right: 10px;
 }
-.restaurant-costForTwoMessage{
+.restaurant-costForTwoMessage {
   color: #3e4152;
   font-size: 15px;
   font-weight: 700;
   margin-right: 10px;
 }
-.restaurant-line{
+.restaurant-line {
   max-width: 50%;
   margin: 0 auto;
   display: flex;
@@ -149,7 +152,6 @@
   width: 50%;
 }
 
-
 .btn-container {
   position: relative;
   bottom: 20px;
@@ -191,35 +193,102 @@
   font-size: 1.3rem;
   order: 3; /* Set the order to appear at the far right */
 }
-.restaurant-footer{ 
+.restaurant-footer {
   display: flex;
-  background-color:#60b246;
+  background-color: #60b246;
   color: #fff;
   justify-content: space-between;
   padding: 10px;
   position: sticky;
   bottom: 0;
-  width:50%;
+  width: 50%;
   margin: 0 auto;
   z-index: 2;
   cursor: pointer;
   align-items: center;
-  transition: transform 0.25s ease; 
+  transition: transform 0.25s ease;
   transform: translate3d(0, 0, 0);
- 
 }
-.cart-quantity-price{
-  margin-right:5px ;
+.cart-quantity-price {
+  margin-right: 5px;
   text-align: left;
 }
-.cart-route{
+.cart-route {
   flex: 1;
   text-align: right;
-  align-items:center;
-  display:flex;
+  align-items: center;
+  display: flex;
   justify-content: flex-end;
   padding-right: 20px;
 }
-.cart-text{
+.cart-text {
   padding: 6px 10px;
+}
+.cart-exist-popup {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: 33%;
+  width: 30%;
+  z-index: 5;
+  margin: 0 auto;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 20px;
+  box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(100%);
+  transition: transform 0.5s ease-in-out;
+}
+.cart-exist-popup.show {
+  transform: translateY(0);
+  bottom: 20px;
+}
+.popup-header {
+  margin: 10px auto 10px 10px;
+  padding-bottom: 5px;
+  color: #282c3f;
+  font-weight: 600;
+  font-size: 20px;
+}
+.popup-text {
+  margin: 10px auto 10px 10px;
+  color: #535665;
+  line-height: 20px;
+  font-size: 14px;
+}
+.popup-button {
+  height: 50px;
+  margin: 10px 30px;
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
+  width: 100%;
+}
+.popup-button-false {
+  display: flex;
+  cursor: pointer;
+  width: 50%;
+  margin: 10px;
+  padding: 10px;
+  background-color: #fff;
+  border: 2px solid #60b246;
+  font-weight: 600;
+  color: #60b246;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+}
+.popup-button-true {
+  display: flex;
+  cursor: pointer;
+  width: 50%;
+  margin: 10px;
+  padding: 10px;
+  background-color: #60b246;
+  border: 2px solid #60b246;
+  font-weight: 600;
+  color: #fff;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
 }
